# litespih4x

./: .gitignore  README.md  pyproject.toml
altera-mem-test/: deca.py
cd-tests/: altera_max10_dev_kit.py
cocotb-tests/: .gitignore  Makefile  openocd-rbb-icode.vcd  openocd-remote-bitbang-read-sim-idcode.tcl  pyftdi-bad-icode.vcd  sim-gen.py  sim.py
docs/: original-bad-timing.json  timing-11-cycles-read-latency.json  timing-new.json  timing-readahead-maxx.json
dram-tests/: dram_arty.py  dram_cli.py  dram_verilator.py  turboforce_cli.py  udp2spi_cli.py
dram-tests/vcd-dumps/: dump-NO-calib-128-bit-arty.vcd  dump-calib-128-bit-arty.vcd  good-128-bit-read-num2.vcd  good-128-bit-read-sim-128-bit-bus.vcd  good-128-bit-read.vcd  prefetch-0-sim.vcd  prefetch-1-sim.vcd  prefetch-6-sim.vcd  sim-32-bit-bus-1mhz-100mhz.vcd
emu-tests/: calc.py  emu_arty.py  emu_sim.py  ftdi_cli.py  sim_top.v
examples/: .gitignore  arty.py  idcode-arty.tcl  idcode.tcl  irdrscan-openocd-arty.tcl  irdrscan-openocd-blaster1.tcl  irdrscan-openocd-blaster2.tcl  irdrscan-openocd-ftdi-lambdaconcept.tcl  irdrscan-quartus-blaster.tcl  jtag-vcd-parser.py  jtag_hello_max10_dev_kit.py  max10_dev_kit.py  sim.py  usr1-activate-openocd-blaster2.tcl
examples/vcd-dumps/: drscan-20-00DEADBEEF-80.vcd  drscan-21-00DEADBEEF-80.vcd  drscan-22-00DEADBEEF-80.vcd  drscan-23-00DEADBEEF-32-openocd.vcd  drscan-24-00DEADBEEF-32-openocd-ircode-0xe.vcd  drscan-arty-0x2a803fd5-returned-TAP-FSM-LGTM.vcd  drscan-arty-20-mhz-0xa803fd56.txt  drscan-arty-20-mhz-0xa803fd56.vcd  drscan-eleventy-arty-20mhz-0x55007faa-read-back.vcd  drscan-eleventy-arty-20mhz-v2-0x5007faa0-read-back.vcd  drscan.vcd  drscan11-100mhz-subsamp1x-usbblstr2-aa00ff55.vcd  drscan11-100mhz-subsamp1x-usbblstr2-deadbeef.vcd  drscan12-100mhz-subsamp1x-usbblstr2-quart-aa00ff55.vcd  drscan12-100mhz-subsamp1x-usbblstr2-quart-deadbeef.vcd  drscan2-all-ff.vcd  drscan3.vcd  drscan4-00.vcd  drscan4-deadbeef.vcd  drscan4.vcd  drscan5-subsamp1x-usbblstr2-deadbeef.vcd  drscan6-subsamp1x-usbblstr2-deadbeef.vcd  drscan7-subsamp1x-usbblstr2-deadbeef.vcd  drscan8-150mhz-subsamp1x-usbblstr2-deadbeef.vcd  drscan9-100mhz-subsamp1x-usbblstr2-aa00ff55.vcd  dump1.vcd  irscan.vcd  irscan10-100mhz-subsamp1x-usbblstr2.vcd  irscan11-100mhz-subsamp1x-usbblstr2.vcd  irscan12-100mhz-subsamp1x-usbblstr2-quart.vcd  irscan2.vcd  irscan3.vcd  irscan4.vcd  irscan5-subsamp1x-usbblstr2.vcd  irscan5.vcd  irscan9-100mhz-subsamp1x-usbblstr2.vcd  scan-altera.vcd  tlr-arty-returned-TAP-FSM-mostly-LGTM-my-tlr-is-faster.vcd
fsm-async-reset/: fsm_async_reset_migen.py  fsm_async_reset_nmigen.py
fsm-bug/: Makefile  fsm_bug.py  test_fsm_bug.py
litejtag_ext/: hello.py  mohor_tap.py  std_tap.py  tap.py
litejtag_ext/data/: tap_top.v
litejtag_ext/data/jtaglet/: jtag_state_machine.v  jtaglet.v
litejtag_ext/data/mohor/: tap_top.v
litespih4x/: emu.py  emu_dram.py  emu_mem.py  jtaglet_tap.py  macronix_model.py  std_tap.py
litespih4x/data/macronix/: MX25U25635F.v
slow-rpyc-test/: slow-rpyc-test.py
tests/: test_hello.py
tests/litejtag_ext/: test_hello.py  test_litejtag_ext.py
tristate-tests/: TristateModelHand.py  TristateModelHand.v  TristateModuleHand.v  sim_top.v  tstate-sim.py  tstate_sim.py
