[tool.poetry]
name = "litejtag-ext"
version = "0.1.0"
description = ""
authors = ["Jevin Sweval <jevinsweval@gmail.com>"]

[tool.poe.tasks]
test = "pytest"
test-v = "pytest -vvvv"
test-vv = "pytest -vvvv --capture=tee-sys"
print-reg = "poetry run ./examples/jtag_hello_max10_dev_kit.py"
ipython = "poetry run ipython"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "tests",
]

[tool.poetry.dependencies]
python = "^3.9"

rich = "^10.4.0"
pretty-errors = "^1.2.23"
pprintpp = "^0.4.0"
pp-ez = "^0.2.0"
bitstring = "^3.1.7"
attrs = "^21.2.0"
poethepoet = "^0.10.0"

litedram = { path = "../litedram", develop = true }
liteeth = { path = "../liteeth", develop = true }
litehyperbus = { path = "../litehyperbus", develop = true }
liteiclink = { path = "../liteiclink", develop = true }
litejesd204b = { path = "../litejesd204b", develop = true }
litepcie = { path = "../litepcie", develop = true }
litesata = { path = "../litesata", develop = true }
litescope = { path = "../litescope", develop = true }
litesdcard = { path = "../litesdcard", develop = true }
litespi = { path = "../litespi", develop = true }
litevideo = { path = "../litevideo", develop = true }
litex = { path = "../litex", develop = true }
litex-boards = { path = "../litex-boards", develop = true }
migen = { path = "../migen", develop = true }
nmigen = { path = "../nmigen", develop = true }
pythondata-cpu-blackparrot = { path = "../pythondata-cpu-blackparrot", develop = true }
pythondata-cpu-cv32e40p = { path = "../pythondata-cpu-cv32e40p", develop = true }
pythondata-cpu-lm32 = { path = "../pythondata-cpu-lm32", develop = true }
pythondata-cpu-microwatt = { path = "../pythondata-cpu-microwatt", develop = true }
pythondata-cpu-minerva = { path = "../pythondata-cpu-minerva", develop = true }
pythondata-cpu-mor1kx = { path = "../pythondata-cpu-mor1kx", develop = true }
pythondata-cpu-picorv32 = { path = "../pythondata-cpu-picorv32", develop = true }
pythondata-cpu-rocket = { path = "../pythondata-cpu-rocket", develop = true }
pythondata-cpu-serv = { path = "../pythondata-cpu-serv", develop = true }
pythondata-cpu-vexriscv = { path = "../pythondata-cpu-vexriscv", develop = true }
pythondata-cpu-vexriscv-smp = { path = "../pythondata-cpu-vexriscv-smp", develop = true }
pythondata-misc-opentitan = { path = "../pythondata-misc-opentitan", develop = true }
pythondata-misc-tapcfg = { path = "../pythondata-misc-tapcfg", develop = true }
pythondata-misc-usb_ohci = { path = "../pythondata-misc-usb_ohci", develop = true }
pythondata-software-compiler_rt = { path = "../pythondata-software-compiler_rt", develop = true }

cocotb = { path = "../cocotb", develop = true }
cocotb-coverage = "^1.1.0"

pydigitalwavetools = {git = "https://github.com/Nic30/pyDigitalWaveTools"}
importlib-resources = "^5.2.0"
rpyc = "^5.0.1"
pyftdi = "^0.53.2"
toolz = "^0.11.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.6.1"
tox = "^3.23.1"
pytest-clarity = "^0.3.0-alpha.0"
pytest-pycharm = "^0.7.0"
pytest-randomly = "^3.8.0"
pytest-cov = "^2.11.1"
mypy = "^0.812"
scalene = "^1.3.12"
pprofile = "^2.0.5"
py-spy = "^0.3.7"
pyinstrument = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
